# dapr-dev

./: README.md  go.mod  install.sh
config/components/: pubsub.yaml
dapr-api-go/: dapr-api.go  go.mod  run_api_go.sh
functions/classify/: Cargo.toml  build.sh
functions/classify/src/: infer.rs  lib.rs
image-api-go/: go.mod  image_api.go  run_api_go.sh
image-api-rs/src/: main.rs
kuber/: README.md
near-api-rs/: Cargo.toml  run_api_rs.sh
near-api-rs/src/: main.rs
node-api-ts/: README.md  package.json
node-api-ts/sol/: Airdrop.html  bep20.sol  hello.sol  stock.sol  storage.sol
node-api-ts/sol/defi/: ChainToken.sol  Farm.sol  RevenueToken.sol  readme.md
node-api-ts/src/: index.ts
subscriber-api-rs/: Cargo.toml  run_api_rs.sh
subscriber-api-rs/src/: main.rs
wasmedge/v.0.9.0/: install.sh
wasmedge/v0.8.2/: install_wasmedge.sh  install_wasmedge_image.sh  install_wasmedge_image_deps.sh  install_wasmedge_tensorflow.sh  install_wasmedge_tensorflow_deps.sh
web-port/: go.mod  imageHandler.go  run_web.sh  web_port.go
