[package]
name = "near-api-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-jsonrpc-client = "0.1.0"
near-primitives = "0.5.0"
near-chain-configs = "0.5.0"
near-client-primitives = "0.5.0"
near-jsonrpc-primitives = "0.5.0"

dapr = "0.7.2"
tonic = "0.5"
prost = "0.8"
bytes = "1"
prost-types = "0.8"
async-trait = "0.1"
tokio-util = { version = "0.6", optional = true, features= ["codec"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
tonic-build = "0.5"
